// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About page renders correctly 1`] = `
<div
  id="about-page"
>
  <h1
    className="center title"
  >
    About
  </h1>
  <br />
  <div
    className="center"
  >
    <div
      className="avatar"
    >
      <div
        className="avatar-img"
      >
        <img
          alt="bkr-avatar"
          onLoad={[Function]}
          src="/images/bkr1.jpg"
        />
      </div>
      <br />
      <h2>
        Developer
      </h2>
      <p>
        Abu Bakar Naseer
      </p>
    </div>
    <div
      className="avatar"
    >
      <div
        className="avatar-img"
      >
        <img
          alt="fuhs-avatar"
          onLoad={[Function]}
          src="/images/fuhs.jpg"
        />
      </div>
      <br />
      <h2>
        Supervisor
      </h2>
      <p>
        Carsten Fuhs
      </p>
    </div>
  </div>
  <div
    className="FAQ-container"
  >
    <div
      className="sc-bdfBwQ gQgPWn"
    >
      <svg
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "height": "1em",
            "marginRight": 10,
            "opacity": 1,
            "verticalAlign": "middle",
            "width": "1em",
          }
        }
        viewBox="64 -65 897 897"
      >
        <g>
          <path
            d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 347h-442q-14 0 -25 10.5t-11 25.5v0q0 15 11 25.5t25 10.5h442q14 0 25 -10.5t11 -25.5v0
 q0 -15 -11 -25.5t-25 -10.5z"
          />
        </g>
      </svg>
      <span
        className="sc-gsTCUz dJjOnO"
      >
        🦠 FAQs
      </span>
      <div
        className="sc-hKgILt fvgQOo"
        style={
          Object {
            "height": 0,
            "opacity": 0,
          }
        }
      >
        <div
          style={
            Object {
              "transform": "translate3d(20px,0,0)",
            }
          }
        >
          <div
            className="sc-bdfBwQ gQgPWn"
          >
            <svg
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "height": "1em",
                  "marginRight": 10,
                  "opacity": 1,
                  "verticalAlign": "middle",
                  "width": "1em",
                }
              }
              viewBox="64 -65 897 897"
            >
              <g>
                <path
                  d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 420h-184v183q0 15 -10.5 25.5t-25.5 10.5v0q-14 0 -25 -10.5t-11 -25.5v-183h-184
 q-15 0 -25.5 -11t-10.5 -25v0q0 -15 10.5 -25.5t25.5 -10.5h184v-183q0 -15 11 -25.5t25 -10.5v0q15 0 25.5 10.5t10.5 25.5v183h184q15 0 25.5 10.5t10.5 25.5v0q0 14 -10.5 25t-25.5 11z"
                />
              </g>
            </svg>
            <span
              className="sc-gsTCUz dJjOnO"
            >
              What's this app for? 🤔
            </span>
            <div
              className="sc-hKgILt fvgQOo"
              style={
                Object {
                  "height": 0,
                  "opacity": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "transform": "translate3d(20px,0,0)",
                  }
                }
              >
                <div
                  className="sc-eCssSg fTldBt"
                >
                  <div
                    className="sc-jSgupP hoepWr"
                  >
                    <p
                      className="sc-dlfnbm bJDDtF"
                    >
                      To help you understand, visualise, and predict using official COVID data from 
                      <a
                        className="answer-box-link"
                        href="https://data.london.gov.uk/dataset/coronavirus--covid-19--cases"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        the UK government itself!
                      </a>
                       
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bdfBwQ gQgPWn"
          >
            <svg
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "height": "1em",
                  "marginRight": 10,
                  "opacity": 1,
                  "verticalAlign": "middle",
                  "width": "1em",
                }
              }
              viewBox="64 -65 897 897"
            >
              <g>
                <path
                  d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 420h-184v183q0 15 -10.5 25.5t-25.5 10.5v0q-14 0 -25 -10.5t-11 -25.5v-183h-184
 q-15 0 -25.5 -11t-10.5 -25v0q0 -15 10.5 -25.5t25.5 -10.5h184v-183q0 -15 11 -25.5t25 -10.5v0q15 0 25.5 10.5t10.5 25.5v183h184q15 0 25.5 10.5t10.5 25.5v0q0 14 -10.5 25t-25.5 11z"
                />
              </g>
            </svg>
            <span
              className="sc-gsTCUz dJjOnO"
            >
              Who can use this?
            </span>
            <div
              className="sc-hKgILt fvgQOo"
              style={
                Object {
                  "height": 0,
                  "opacity": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "transform": "translate3d(20px,0,0)",
                  }
                }
              >
                <div
                  className="sc-eCssSg fTldBt"
                >
                  <div
                    className="sc-jSgupP hoepWr"
                  >
                    <p
                      className="sc-dlfnbm bJDDtF"
                    >
                      Anyone! From people that are wanting to see and predict the cases counts in London to people curious about visualisation of API's
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bdfBwQ gQgPWn"
          >
            <svg
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "height": "1em",
                  "marginRight": 10,
                  "opacity": 1,
                  "verticalAlign": "middle",
                  "width": "1em",
                }
              }
              viewBox="64 -65 897 897"
            >
              <g>
                <path
                  d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 420h-184v183q0 15 -10.5 25.5t-25.5 10.5v0q-14 0 -25 -10.5t-11 -25.5v-183h-184
 q-15 0 -25.5 -11t-10.5 -25v0q0 -15 10.5 -25.5t25.5 -10.5h184v-183q0 -15 11 -25.5t25 -10.5v0q15 0 25.5 10.5t10.5 25.5v183h184q15 0 25.5 10.5t10.5 25.5v0q0 14 -10.5 25t-25.5 11z"
                />
              </g>
            </svg>
            <span
              className="sc-gsTCUz dJjOnO"
            >
              Why did you make this?
            </span>
            <div
              className="sc-hKgILt fvgQOo"
              style={
                Object {
                  "height": 0,
                  "opacity": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "transform": "translate3d(20px,0,0)",
                  }
                }
              >
                <div
                  className="sc-eCssSg fTldBt"
                >
                  <div
                    className="sc-jSgupP hoepWr"
                  >
                    <p
                      className="sc-dlfnbm bJDDtF"
                    >
                      It's a part of my Final Year Project at Birkbeck, University of London 
                      <span
                        aria-label="owl"
                        role="img"
                      >
                        🦉
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bdfBwQ gQgPWn"
          >
            <svg
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "height": "1em",
                  "marginRight": 10,
                  "opacity": 1,
                  "verticalAlign": "middle",
                  "width": "1em",
                }
              }
              viewBox="64 -65 897 897"
            >
              <g>
                <path
                  d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 420h-184v183q0 15 -10.5 25.5t-25.5 10.5v0q-14 0 -25 -10.5t-11 -25.5v-183h-184
 q-15 0 -25.5 -11t-10.5 -25v0q0 -15 10.5 -25.5t25.5 -10.5h184v-183q0 -15 11 -25.5t25 -10.5v0q15 0 25.5 10.5t10.5 25.5v183h184q15 0 25.5 10.5t10.5 25.5v0q0 14 -10.5 25t-25.5 11z"
                />
              </g>
            </svg>
            <span
              className="sc-gsTCUz dJjOnO"
            >
              Can I use your API for my project? 🤓
            </span>
            <div
              className="sc-hKgILt fvgQOo"
              style={
                Object {
                  "height": 0,
                  "opacity": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "transform": "translate3d(20px,0,0)",
                  }
                }
              >
                <div
                  className="sc-eCssSg fTldBt"
                >
                  <div
                    className="sc-jSgupP hoepWr"
                  >
                    <p
                      className="sc-dlfnbm bJDDtF"
                    >
                      Please get in touch with details of your project.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sc-bdfBwQ gQgPWn"
          >
            <svg
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "height": "1em",
                  "marginRight": 10,
                  "opacity": 1,
                  "verticalAlign": "middle",
                  "width": "1em",
                }
              }
              viewBox="64 -65 897 897"
            >
              <g>
                <path
                  d="M888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0zM732 420h-184v183q0 15 -10.5 25.5t-25.5 10.5v0q-14 0 -25 -10.5t-11 -25.5v-183h-184
 q-15 0 -25.5 -11t-10.5 -25v0q0 -15 10.5 -25.5t25.5 -10.5h184v-183q0 -15 11 -25.5t25 -10.5v0q15 0 25.5 10.5t10.5 25.5v183h184q15 0 25.5 10.5t10.5 25.5v0q0 14 -10.5 25t-25.5 11z"
                />
              </g>
            </svg>
            <span
              className="sc-gsTCUz dJjOnO"
            >
              Where can I reach you?
            </span>
            <div
              className="sc-hKgILt fvgQOo"
              style={
                Object {
                  "height": 0,
                  "opacity": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "transform": "translate3d(20px,0,0)",
                  }
                }
              >
                <div
                  className="sc-bdfBwQ gQgPWn"
                >
                  <svg
                    onClick={[Function]}
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": "1em",
                        "marginRight": 10,
                        "opacity": 0.3,
                        "verticalAlign": "middle",
                        "width": "1em",
                      }
                    }
                    viewBox="64 -65 897 897"
                  >
                    <g>
                      <path
                        d="M717.5 589.5q-10.5 10.5 -25.5 10.5t-26 -10l-154 -155l-154 155q-11 10 -26 10t-25.5 -10.5t-10.5 -25.5t11 -25l154 -155l-154 -155q-11 -10 -11 -25t10.5 -25.5t25.5 -10.5t26 10l154 155l154 -155q11 -10 26 -10t25.5 10.5t10.5 25t-11 25.5l-154 155l154 155
 q11 10 11 25t-10.5 25.5zM888 760v0v0v-753v0h-752v0v753v0h752zM888 832h-752q-30 0 -51 -21t-21 -51v-753q0 -29 21 -50.5t51 -21.5h753q29 0 50.5 21.5t21.5 50.5v753q0 30 -21.5 51t-51.5 21v0z"
                      />
                    </g>
                  </svg>
                  <span
                    className="sc-gsTCUz dJjOnO"
                  >
                    <a
                      className="tree-link"
                      href="mailto:bkrmalick@hotmail.com?subject=Regarding COVIDTRACKER Web App"
                    >
                      📧 bkrmalick@hotmail.com
                    </a>
                  </span>
                  <div
                    className="sc-hKgILt fvgQOo"
                    style={
                      Object {
                        "height": 0,
                        "opacity": 0,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "transform": "translate3d(20px,0,0)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders correctly 1`] = `
Array [
  <div
    className="mm-popup"
  >
    <div
      className="mm-popup__overlay"
      onClick={[Function]}
      role="presentation"
      style={Object {}}
    />
  </div>,
  <div
    className="App"
  >
    <div
      className="navbar"
    >
      <div
        className="navbar-container container"
      >
        <a
          className="navbar-logo"
          href="/"
          onClick={[Function]}
        >
          <svg
            className="navbar-icon"
            enableBackground="new 0 0 48 48"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": "#fff",
              }
            }
            version="1"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              fill="#CFD8DC"
              points="39.4,23 38.6,19 26,21.6 26,8 22,8 22,20.3 8.1,11.3 5.9,14.7 21.1,24.5 9.4,39.8 12.6,42.2 23.9,27.4 32.3,40.1 35.7,37.9 27.3,25.4"
            />
            <circle
              cx="24"
              cy="24"
              fill="#3F51B5"
              r="7"
            />
            <g
              fill="#00BCD4"
            >
              <circle
                cx="24"
                cy="8"
                r="5"
              />
              <circle
                cx="39"
                cy="21"
                r="5"
              />
              <circle
                cx="7"
                cy="13"
                r="5"
              />
              <circle
                cx="11"
                cy="41"
                r="5"
              />
              <circle
                cx="34"
                cy="39"
                r="5"
              />
            </g>
          </svg>
          COVIDTracker
        </a>
        <div
          className="menu-icon"
          onClick={[Function]}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": "#fff",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            />
          </svg>
        </div>
        <ul
          className="nav-menu"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-links"
              href="/"
              onClick={[Function]}
            >
              <svg
                className="navbar-icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fff",
                  }
                }
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Home
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-links"
              href="/go"
              onClick={[Function]}
            >
              <svg
                className="navbar-icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fff",
                  }
                }
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M288 0c-69.59 0-126 56.41-126 126 0 56.26 82.35 158.8 113.9 196.02 6.39 7.54 17.82 7.54 24.2 0C331.65 284.8 414 182.26 414 126 414 56.41 357.59 0 288 0zm0 168c-23.2 0-42-18.8-42-42s18.8-42 42-42 42 18.8 42 42-18.8 42-42 42zM20.12 215.95A32.006 32.006 0 0 0 0 245.66v250.32c0 11.32 11.43 19.06 21.94 14.86L160 448V214.92c-8.84-15.98-16.07-31.54-21.25-46.42L20.12 215.95zM288 359.67c-14.07 0-27.38-6.18-36.51-16.96-19.66-23.2-40.57-49.62-59.49-76.72v182l192 64V266c-18.92 27.09-39.82 53.52-59.49 76.72-9.13 10.77-22.44 16.95-36.51 16.95zm266.06-198.51L416 224v288l139.88-55.95A31.996 31.996 0 0 0 576 426.34V176.02c0-11.32-11.43-19.06-21.94-14.86z"
                />
              </svg>
              Tracker
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-links"
              href="/about"
              onClick={[Function]}
            >
              <svg
                className="navbar-icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fff",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                />
              </svg>
              About
            </a>
          </li>
          <li
            className="nav-btn"
          >
            <a
              className="btn-link"
              href="/about/4"
              onClick={[Function]}
            >
              <button
                className="btn btn--outline btn--medium null"
              >
                API
              </button>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div>
      <div
        className="hero-container"
      >
        <video
          autoPlay={true}
          loop={true}
          muted={true}
          playsInline={true}
          src="videos/video-2.mp4"
        />
        <h1
          className="fade-in"
        >
          STAY INFORMED, STAY SAFE
        </h1>
        <p
          className="fade-in"
        >
          Track recent COVID-19 cases in London
        </p>
        <div
          className="hero-btns"
        >
          <a
            href="/go"
            onClick={[Function]}
          >
            <button
              className="btn btn--outline btn--large null"
            >
              GO
            </button>
          </a>
          <a
            href="/about"
            onClick={[Function]}
          >
            <button
              className="btn btn--primary btn--large null"
            >
              <svg
                className="navbar-icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                />
              </svg>
               MORE INFO
            </button>
          </a>
        </div>
      </div>
      <div
        className="home__hero-section"
      >
        <div
          className="container"
        >
          <div
            className="row home__hero-row"
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <div
              className="col"
            >
              <div
                className="home__hero-text-wrapper"
              >
                <div
                  className="top-line"
                >
                  Comfort
                </div>
                <h1
                  className="heading dark"
                >
                  In Knowing Before You Travel
                </h1>
                <p
                  className="home__hero-subtitle dark"
                >
                  Get information on how affected different Boroughs are and your chances of getting infected
                </p>
                
              </div>
            </div>
            <div
              className="col"
            >
              <div
                className="home__hero-img-wrapper"
              >
                <img
                  alt=""
                  className="home__hero-img"
                  src="images/travel.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="home__hero-section darkBg"
      >
        <div
          className="container"
        >
          <div
            className="row home__hero-row"
            style={
              Object {
                "display": "flex",
                "flexDirection": "row-reverse",
              }
            }
          >
            <div
              className="col"
            >
              <div
                className="home__hero-text-wrapper"
              >
                <div
                  className="top-line"
                >
                  Trust
                </div>
                <h1
                  className="heading"
                >
                  In The Data
                </h1>
                <p
                  className="home__hero-subtitle"
                >
                  Get automatically updated data from GOV entities
                </p>
                <a
                  href="/about/1"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn--primary btn--wide blue"
                  >
                    Sources
                  </button>
                </a>
              </div>
            </div>
            <div
              className="col"
            >
              <div
                className="home__hero-img-wrapper"
              >
                <img
                  alt=""
                  className="home__hero-img"
                  src="images/medical5.svg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="footer-container"
    >
      <div
        className="footer-links"
      >
        <div
          className="footer-link-wrapper"
        >
          <div
            className="footer-link-items"
          >
            <h2>
              Info
            </h2>
            <a
              href="/about"
              onClick={[Function]}
            >
              About
            </a>
          </div>
          <div
            className="footer-link-items"
          >
            <h2>
              Data
            </h2>
            <a
              aria-label="data-source"
              href="https://data.london.gov.uk/dataset/coronavirus--covid-19--cases"
              rel="noopener noreferrer"
              target="_blank"
            >
              Source
            </a>
            <a
              href="/help-us-collect"
              onClick={[Function]}
            >
              Help Us Collect
            </a>
          </div>
          <div
            className="footer-link-items"
          >
            <h2>
              Contact
            </h2>
            <a
              href="/about/5"
              onClick={[Function]}
            >
              Email
            </a>
            <a
              aria-label="LinkedIn"
              href="https://www.linkedin.com/in/bkrmalick/"
              rel="noopener noreferrer"
              target="_blank"
            >
              LinkedIn
            </a>
          </div>
        </div>
      </div>
      <section
        className="social-media"
      >
        <div
          className="social-media-wrap"
        >
          <div
            className="footer-logo"
          >
            <a
              className="social-logo"
              href="/"
              onClick={[Function]}
            >
              <svg
                className="navbar-icon"
                enableBackground="new 0 0 48 48"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                version="1"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  fill="#CFD8DC"
                  points="39.4,23 38.6,19 26,21.6 26,8 22,8 22,20.3 8.1,11.3 5.9,14.7 21.1,24.5 9.4,39.8 12.6,42.2 23.9,27.4 32.3,40.1 35.7,37.9 27.3,25.4"
                />
                <circle
                  cx="24"
                  cy="24"
                  fill="#3F51B5"
                  r="7"
                />
                <g
                  fill="#00BCD4"
                >
                  <circle
                    cx="24"
                    cy="8"
                    r="5"
                  />
                  <circle
                    cx="39"
                    cy="21"
                    r="5"
                  />
                  <circle
                    cx="7"
                    cy="13"
                    r="5"
                  />
                  <circle
                    cx="11"
                    cy="41"
                    r="5"
                  />
                  <circle
                    cx="34"
                    cy="39"
                    r="5"
                  />
                </g>
              </svg>
              COVIDTracker
            </a>
          </div>
          <small
            className="website-rights"
          >
            CT © 
            2021
          </small>
          <div
            className="social-icons"
          >
            <a
              aria-label="LinkedIn"
              className="social-icon-link"
              href="https://www.linkedin.com/in/bkrmalick/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </a>
            <a
              aria-label="Github"
              className="social-icon-link"
              href="https://github.com/bkrmalick/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 496 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                />
              </svg>
            </a>
          </div>
        </div>
      </section>
    </div>
  </div>,
]
`;

exports[`COVID survey page renders correctly 1`] = `
<div
  className="HelpUsCollect-container"
>
  <div
    className="css-1rpz77w"
  />
</div>
`;

exports[`Home page renders correctly 1`] = `
<div>
  <div
    className="hero-container"
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      playsInline={true}
      src="videos/video-2.mp4"
    />
    <h1
      className="fade-in"
    >
      STAY INFORMED, STAY SAFE
    </h1>
    <p
      className="fade-in"
    >
      Track recent COVID-19 cases in London
    </p>
    <div
      className="hero-btns"
    >
      <a
        href="/go"
        onClick={[Function]}
      >
        <button
          className="btn btn--outline btn--large null"
        >
          GO
        </button>
      </a>
      <a
        href="/about"
        onClick={[Function]}
      >
        <button
          className="btn btn--primary btn--large null"
        >
          <svg
            className="navbar-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
           MORE INFO
        </button>
      </a>
    </div>
  </div>
  <div
    className="home__hero-section"
  >
    <div
      className="container"
    >
      <div
        className="row home__hero-row"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <div
          className="col"
        >
          <div
            className="home__hero-text-wrapper"
          >
            <div
              className="top-line"
            >
              Comfort
            </div>
            <h1
              className="heading dark"
            >
              In Knowing Before You Travel
            </h1>
            <p
              className="home__hero-subtitle dark"
            >
              Get information on how affected different Boroughs are and your chances of getting infected
            </p>
            
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="home__hero-img-wrapper"
          >
            <img
              alt=""
              className="home__hero-img"
              src="images/travel.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="home__hero-section darkBg"
  >
    <div
      className="container"
    >
      <div
        className="row home__hero-row"
        style={
          Object {
            "display": "flex",
            "flexDirection": "row-reverse",
          }
        }
      >
        <div
          className="col"
        >
          <div
            className="home__hero-text-wrapper"
          >
            <div
              className="top-line"
            >
              Trust
            </div>
            <h1
              className="heading"
            >
              In The Data
            </h1>
            <p
              className="home__hero-subtitle"
            >
              Get automatically updated data from GOV entities
            </p>
            <a
              href="/about/1"
              onClick={[Function]}
            >
              <button
                className="btn btn--primary btn--wide blue"
              >
                Sources
              </button>
            </a>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="home__hero-img-wrapper"
          >
            <img
              alt=""
              className="home__hero-img"
              src="images/medical5.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tracker page renders correctly 1`] = `
<section
  className="MapContainer"
>
  <article
    className="MapContainer__block"
  >
    <h2
      className="MapContainer__block__title"
    >
      London Boroughs
    </h2>
    <div
      className="MapContainer__block__dateBox"
    >
      <label
        htmlFor="start"
      >
        Showing Data for: 
      </label>
      <input
        id="start"
        max="NaN-NaN-NaN"
        min="2020-02-01"
        onChange={[Function]}
        type="date"
        value=""
      />
      <p
        id="mode"
      >
        Mode: 
        <span
          className="nullMode"
        />
      </p>
    </div>
    <p
      className="MapContainer__block__headline"
    >
      Hover over a Borough to view its COVID case counts
    </p>
    <div
      className="MapContainer__block__MapLegendContainer"
    >
      <div
        className="MapContainer__block__MapLegendContainer__LegendWrapper"
      >
        <div
          className="legend"
        >
          <div
            className="legend-title"
          >
            Danger 
            % 
            <div
              className="tooltip"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                />
              </svg>
              <div
                className="right"
              >
                <div
                  className="text-content"
                >
                  <p>
                    A relative danger level of the area. 
                    <br />
                    <br />
                     Based on the following:
                  </p>
                  <br />
                  <ul>
                    <li>
                      Infection counts in the past two weeks
                    </li>
                    <li>
                      Population density
                    </li>
                  </ul>
                </div>
                <i />
              </div>
            </div>
          </div>
          <div
            className="legend-scale"
          >
            <ul
              className="legend-labels"
            >
              <li>
                <span
                  style={
                    Object {
                      "background": "rgb(100%,100%, 100%)",
                    }
                  }
                />
                0
                %
              </li>
              <li>
                <span
                  style={
                    Object {
                      "background": "rgb(100%,75%, 75%)",
                    }
                  }
                />
                25
                %
              </li>
              <li>
                <span
                  style={
                    Object {
                      "background": "rgb(100%,50%, 50%)",
                    }
                  }
                />
                50
                %
              </li>
              <li>
                <span
                  style={
                    Object {
                      "background": "rgb(100%,25%, 25%)",
                    }
                  }
                />
                75
                %
              </li>
              <li>
                <span
                  style={
                    Object {
                      "background": "rgb(100%,0%, 0%)",
                    }
                  }
                />
                100
                %
              </li>
            </ul>
          </div>
          <div
            className="legend-source"
          >
             
            
             
            <a
              href="https://data.london.gov.uk/dataset/coronavirus--covid-19--cases"
              rel="noopener noreferrer"
              target="_blank"
            >
              Greater London Authority
            </a>
          </div>
        </div>
      </div>
      <div
        className="MapContainer__block__MapLegendContainer__map MapContainer__block__MapLegendContainer__map--london"
        style={
          Object {
            "height": "25vw",
            "width": "50vw",
          }
        }
      >
        <div
          style={
            Object {
              "height": 0,
              "overflow": "visible",
              "width": 0,
            }
          }
        />
        <div
          className="css-lcdnyt"
        />
        <span
          aria-label="error"
          role="img"
          style={
            Object {
              "Zposition": 4,
              "display": "none",
              "margin": "auto",
              "position": "relative",
            }
          }
        >
          ❌
        </span>
        <div
          className="MapContainer__block__MapLegendContainer__map__tooltip"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="MapContainer__block__MapLegendContainer__PlaceHolderRight"
      />
    </div>
    <p
      className="MapContainer__block__refreshDate"
    >
      Last Updated   
      ...
       
    </p>
  </article>
  <form
    id="input"
    onSubmit={[Function]}
  >
    <label
      htmlFor="fname"
      id="LabelForPostCode"
    >
      Post Code
    </label>
    <input
      id="postcode"
      onChange={[Function]}
      type="text"
      value=""
    />
    <br />
    <br />
    <p
      className="error"
    >
      
    </p>
    <button
      className="btn btn--primary btn--medium blue"
      disabled={false}
      type="submit"
    >
      GO
    </button>
  </form>
</section>
`;
